--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -2,6 +2,6 @@
 <resources>
     <string name="app_name">booking-app</string>
     <string name="title_activity_main">booking-app</string>
-    <string name="package_name">io.ionic.starter</string>
-    <string name="custom_url_scheme">io.ionic.starter</string>
+    <string name="package_name">com.romani.app.booking</string>
+    <string name="custom_url_scheme">com.romani.app.booking</string>
 </resources>
